# r2048-ai

./: Cargo.toml  README.md
.github/workflows/: build.yml
benches/: game_bench.rs  random_moves.rs
src/: ai.rs  game.rs  lib.rs  main.rs
src/game/: row.rs  unpacked.rs
