[package]
name = "r2048-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
clearscreen = "1.0.10"
rand = "0.8.5"
static_assertions = "1.1.0"
termcolor = "1.1.3"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
quickcheck = "1.0.3"

[[bench]]
name = "game_bench"
harness = false
